# django-kit

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.updated.txt
blog/: admin.py  apps.py  di.py  filtersets.py  models.py  serializers.py  services.py  urls.py  views.py
blog/management/commands/: generate_fake_blog_data.py
blog/migrations/: 0001_initial.py
kit/: apps.py  asgi.py  dotenv.py  exceptions.py  gunicornconf.py  models.py  paginations.py  serializers.py  services.py  settings-prod.py  settings.prod.py  settings.py  settingsprod.py  urls.py  utils.py  validators.py  views.py  wsgi.py
kit/kit/: asgi.py  settings.py  urls.py
kit/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_remove_user_username.py
userprofile/: apps.py  di.py  models.py  serializers.py  services.py  urls.py  views.py
userprofile/migrations/: 0001_initial.py
